apps/omnigent/service-omnigent.yaml
apiVersion: v1
kind: Service
metadata:
  name: omnigent
  namespace: omnigent
spec:
  type: ClusterIP
  selector:
    app: omnigent
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
